# trnscrb

./: README.md  pyproject.toml
docs/: index.html
tests/: test_cli_enrich.py  test_enricher.py  test_settings.py  test_transcriber.py
trnscrb/: cli.py  enricher.py  mcp_server.py  menu_bar.py  recorder.py  settings.py  transcriber.py
